@@ -35,7 +35,7 @@ END
 
 mkdir sub
 cat > foo.c << 'END'
-int main(void)
+int main (void)
 {
   extern int bar;
   return bar;
@@ -53,10 +53,11 @@ grep 'include.*\./\$(DEPDIR)/bar\.P' Makefile.in
 grep 'include.*/\./\$(DEPDIR)' Makefile.in && Exit 1
 
 $AUTOCONF
-./configure
+# Don't reject slower dependency extractors, for better coverage.
+./configure --enable-dependency-tracking
 $MAKE
 ./zardoz
-$MAKE distcheck
+$MAKE DISTCHECK_CONFIGURE_FLAGS='--enable-dependency-tracking' distcheck
 
 # Try again with subdir-objects option.
 
@@ -71,9 +72,10 @@ grep 'include.*[^a-zA-Z0-9_/]sub/\$(DEPDIR)/bar\.P' Makefile.in
 $EGREP 'include.*/(\.|sub)/\$\(DEPDIR\)' Makefile.in && Exit 1
 
 $AUTOCONF
-./configure
+# Don't reject slower dependency extractors, for better coverage.
+./configure --enable-dependency-tracking
 $MAKE
 ./zardoz
-$MAKE distcheck
+$MAKE DISTCHECK_CONFIGURE_FLAGS='--enable-dependency-tracking' distcheck
 
 :
