@@ -49,9 +49,10 @@ grep 'include.*\./\$(DEPDIR)/bar\.P' Makefile.in
 grep 'include.*/\./\$(DEPDIR)' Makefile.in && Exit 1
 
 $AUTOCONF
-./configure
+# Don't reject slower dependency extractors, for better coverage.
+./configure --enable-dependency-tracking
 $MAKE
-$MAKE distcheck
+$MAKE DISTCHECK_CONFIGURE_FLAGS='--enable-dependency-tracking' distcheck
 
 # Try again with subdir-objects option.
 
@@ -66,8 +67,9 @@ grep 'include.*[^a-zA-Z0-9_/]sub/\$(DEPDIR)/bar\.P' Makefile.in
 $EGREP 'include.*/(\.|sub)/\$\(DEPDIR\)' Makefile.in && Exit 1
 
 $AUTOCONF
-./configure
+# Don't reject slower dependency extractors, for better coverage.
+./configure --enable-dependency-tracking
 $MAKE
-$MAKE distcheck
+$MAKE DISTCHECK_CONFIGURE_FLAGS='--enable-dependency-tracking' distcheck
 
 :
