@@ -1,3 +1,13 @@
+2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	depcomp tests: don't reject slower dependency extractors
+	* tests/depcomp8b.test: Add the `--enable-dependency-tracking'
+	option to `configure' invocations, so that slower dependency
+	extractors are not rejected.
+	* tests/depcomp8b.test: Likewise.  Also ...
+	(foo.c): ... since we are at it, fix spacing to be consistent
+	with GNU coding standards.
+
 2011-04-16  Jim Meyering  <meyering@redhat.com>
 
 	depcomp: correct invalid sed invocation
